hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_pair_index.php.exp
ERROR: File "lambda_called_on_pair_index.php", line 3, characters 32-33:
Tuple elements can only be accessed with an integer literal (Typing[4116])
