hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_pair_index.php
<?hh
function f(): void {
  $f = ($v ==> Pair {"a", "b"}[$v]);
  $f(0);
}
